--- a/Results/Table2.tex
+++ b/Results/Table2.tex
@@ -5,119 +5,119 @@
             &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
             &\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{efw}\\
 \hline
-time\_total  &       0.221\sym{***}&       0.353\sym{***}&       0.246\sym{*}  &       0.332\sym{**} &       0.297\sym{**} &       0.293\sym{***}&       0.265\sym{**} &       0.319\sym{**} &       0.348\sym{***}\\
-            &    (0.0689)         &     (0.101)         &     (0.131)         &     (0.155)         &     (0.117)         &    (0.0967)         &     (0.107)         &     (0.121)         &    (0.0955)         \\
+centuries   &       0.221\sym{***}&       0.204\sym{**} &      0.0954         &       0.212         &       0.181\sym{*}  &       0.196\sym{***}&       0.160\sym{**} &       0.197\sym{**} &       0.249\sym{***}\\
+            &    (0.0599)         &    (0.0781)         &    (0.0836)         &     (0.145)         &    (0.0967)         &    (0.0703)         &    (0.0750)         &    (0.0911)         &    (0.0807)         \\
 [1em]
-1.colonizer &                     &           0         &           0         &           0         &           0         &           0         &           0         &           0         &           0         \\
-            &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
+1.colonizer &                     &           0         &                     &           0         &           0         &           0         &                     &                     &                     \\
+            &                     &         (.)         &                     &         (.)         &         (.)         &         (.)         &                     &                     &                     \\
 [1em]
-2.colonizer &                     &       1.052\sym{**} &       1.986\sym{**} &       1.037\sym{**} &       0.264         &       0.956\sym{**} &       0.181         &       0.823         &       0.466         \\
-            &                     &     (0.478)         &     (0.783)         &     (0.498)         &     (0.538)         &     (0.443)         &     (0.540)         &     (0.641)         &     (0.510)         \\
+2.colonizer &                     &       1.708\sym{***}&           0         &       1.665\sym{***}&       1.281\sym{***}&       1.577\sym{***}&           0         &           0         &           0         \\
+            &                     &     (0.149)         &         (.)         &     (0.153)         &     (0.166)         &     (0.141)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-3.colonizer &                     &       0.468         &       1.894\sym{**} &       0.380         &     -0.0662         &       0.409         &      -0.295         &       0.255         &     -0.0125         \\
-            &                     &     (0.488)         &     (0.813)         &     (0.509)         &     (0.538)         &     (0.452)         &     (0.542)         &     (0.677)         &     (0.515)         \\
+3.colonizer &                     &       1.028\sym{***}&      -0.316         &       0.997\sym{***}&       0.843\sym{***}&       1.030\sym{***}&      -0.588\sym{***}&      -0.521\sym{*}  &      -0.494\sym{**} \\
+            &                     &     (0.140)         &     (0.273)         &     (0.150)         &     (0.122)         &     (0.140)         &     (0.184)         &     (0.271)         &     (0.217)         \\
 [1em]
-4.colonizer &                     &       1.518         &                     &       1.511         &       1.200         &       1.499\sym{*}  &       0.890         &       2.110\sym{*}  &       1.215         \\
-            &                     &     (0.922)         &                     &     (0.959)         &     (0.889)         &     (0.852)         &     (0.897)         &     (1.082)         &     (0.851)         \\
+4.colonizer &                     &       0.986\sym{***}&                     &       0.987\sym{***}&       0.985\sym{***}&       0.986\sym{***}&      -0.118         &      -0.627\sym{*}  &      -0.422\sym{*}  \\
+            &                     &     (0.142)         &                     &     (0.144)         &     (0.144)         &     (0.142)         &     (0.239)         &     (0.317)         &     (0.246)         \\
 [1em]
-5.colonizer &                     &      -0.375         &                     &      -0.382         &      -0.693         &      -0.395         &      -1.068         &      -0.551         &       2.391\sym{*}  \\
-            &                     &     (0.922)         &                     &     (0.959)         &     (0.889)         &     (0.852)         &     (0.902)         &     (1.042)         &     (1.346)         \\
+5.colonizer &                     &       0.169\sym{***}&                     &       0.172\sym{***}&       0.160\sym{***}&       0.166\sym{***}&      -1.343\sym{***}&      -1.528\sym{***}&       2.004\sym{***}\\
+            &                     &    (0.0305)         &                     &    (0.0564)         &    (0.0377)         &    (0.0274)         &     (0.210)         &     (0.436)         &     (0.451)         \\
 [1em]
-6.colonizer &                     &       0.161         &       0.903         &       0.451         &      -0.424         &       0.312         &      -0.151         &     -0.0751         &      -0.306         \\
-            &                     &     (0.662)         &     (0.953)         &     (0.834)         &     (0.680)         &     (0.615)         &     (0.675)         &     (0.886)         &     (0.688)         \\
+6.colonizer &                     &       1.134\sym{***}&      -0.619\sym{***}&       1.159\sym{***}&       0.550\sym{**} &       1.153\sym{***}&      -0.255         &      -0.372         &      -0.386\sym{**} \\
+            &                     &     (0.199)         &     (0.184)         &     (0.370)         &     (0.236)         &     (0.180)         &     (0.354)         &     (0.280)         &     (0.184)         \\
 [1em]
-7.colonizer &                     &      -0.174         &       1.210         &      -0.126         &      -0.554         &     -0.0272         &      -0.493         &      -0.146         &      -0.503         \\
-            &                     &     (0.596)         &     (0.927)         &     (0.692)         &     (0.641)         &     (0.554)         &     (0.633)         &     (0.815)         &     (0.605)         \\
+7.colonizer &                     &       0.656\sym{**} &      -0.756\sym{***}&       0.613         &       0.497\sym{*}  &       0.673\sym{**} &      -0.791\sym{***}&      -0.932\sym{**} &      -0.977\sym{***}\\
+            &                     &     (0.311)         &     (0.266)         &     (0.428)         &     (0.275)         &     (0.301)         &     (0.240)         &     (0.369)         &     (0.310)         \\
 [1em]
-8.colonizer &                     &       0.544         &       1.404         &       0.490         &      -0.202         &       0.672         &       0.157         &       0.481         &       0.312         \\
-            &                     &     (0.538)         &     (0.841)         &     (0.696)         &     (0.588)         &     (0.499)         &     (0.586)         &     (0.755)         &     (0.555)         \\
+8.colonizer &                     &       1.525\sym{***}&      -0.268         &       1.516\sym{***}&       0.934\sym{***}&       1.541\sym{***}&       0.292         &      0.0254         &      0.0838         \\
+            &                     &     (0.235)         &     (0.237)         &     (0.373)         &     (0.279)         &     (0.224)         &     (0.231)         &     (0.264)         &     (0.213)         \\
 [1em]
-america     &                     &                     &                     &                     &      -0.746         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.472)         &                     &                     &                     &                     \\
+america     &                     &                     &                     &                     &      -0.793         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.558)         &                     &                     &                     &                     \\
 [1em]
-africa      &                     &                     &                     &                     &      -1.379\sym{***}&                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.396)         &                     &                     &                     &                     \\
+africa      &                     &                     &                     &                     &      -1.434\sym{***}&                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.496)         &                     &                     &                     &                     \\
 [1em]
-asia        &                     &                     &                     &                     &      -0.935\sym{**} &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.429)         &                     &                     &                     &                     \\
+asia        &                     &                     &                     &                     &      -0.789         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.500)         &                     &                     &                     &                     \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &       1.937\sym{***}&                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.683)         &                     &                     \\
+lat\_abst    &                     &                     &                     &                     &                     &                     &       1.929\sym{**} &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.859)         &                     &                     \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &                     &       0.231         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.219)         &                     &                     \\
+landlock    &                     &                     &                     &                     &                     &                     &       0.196         &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.165)         &                     &                     \\
 [1em]
-island      &                     &                     &                     &                     &                     &                     &       0.714\sym{***}&                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.228)         &                     &                     \\
+island      &                     &                     &                     &                     &                     &                     &       0.885\sym{***}&                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.230)         &                     &                     \\
 [1em]
-humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00207         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0181)         &                     \\
+humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00532         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0189)         &                     \\
 [1em]
-humid2      &                     &                     &                     &                     &                     &                     &                     &     0.00378         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0297)         &                     \\
+humid2      &                     &                     &                     &                     &                     &                     &                     &    -0.00915         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0341)         &                     \\
 [1em]
-humid3      &                     &                     &                     &                     &                     &                     &                     &     0.00194         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0187)         &                     \\
+humid3      &                     &                     &                     &                     &                     &                     &                     &   -0.000102         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0200)         &                     \\
 [1em]
-humid4      &                     &                     &                     &                     &                     &                     &                     &     0.00745         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0218)         &                     \\
+humid4      &                     &                     &                     &                     &                     &                     &                     &     0.00547         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0251)         &                     \\
 [1em]
-temp1       &                     &                     &                     &                     &                     &                     &                     &      0.0616         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.117)         &                     \\
+temp1       &                     &                     &                     &                     &                     &                     &                     &      0.0946         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0811)         &                     \\
 [1em]
-temp2       &                     &                     &                     &                     &                     &                     &                     &     -0.0732\sym{*}  &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0419)         &                     \\
+temp2       &                     &                     &                     &                     &                     &                     &                     &     -0.0701\sym{*}  &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0378)         &                     \\
 [1em]
-temp3       &                     &                     &                     &                     &                     &                     &                     &     0.00626         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0582)         &                     \\
+temp3       &                     &                     &                     &                     &                     &                     &                     &     -0.0153         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0436)         &                     \\
 [1em]
-temp4       &                     &                     &                     &                     &                     &                     &                     &     -0.0219         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0492)         &                     \\
+temp4       &                     &                     &                     &                     &                     &                     &                     &     -0.0383         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0375)         &                     \\
 [1em]
-temp5       &                     &                     &                     &                     &                     &                     &                     &    -0.00520         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0329)         &                     \\
+temp5       &                     &                     &                     &                     &                     &                     &                     &    -0.00197         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0414)         &                     \\
 [1em]
-steplow     &                     &                     &                     &                     &                     &                     &                     &      -0.255         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.213)         &                     \\
+steplow     &                     &                     &                     &                     &                     &                     &                     &      -0.221         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.233)         &                     \\
 [1em]
-deslow      &                     &                     &                     &                     &                     &                     &                     &      -0.383         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.257)         &                     \\
+deslow      &                     &                     &                     &                     &                     &                     &                     &      -0.352         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.246)         &                     \\
 [1em]
-stepmid     &                     &                     &                     &                     &                     &                     &                     &      0.0496         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.656)         &                     \\
+stepmid     &                     &                     &                     &                     &                     &                     &                     &      -0.118         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.418)         &                     \\
 [1em]
-desmid      &                     &                     &                     &                     &                     &                     &                     &      -1.134         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.826)         &                     \\
+desmid      &                     &                     &                     &                     &                     &                     &                     &      -1.164\sym{***}&                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.344)         &                     \\
 [1em]
-drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.301         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.356)         &                     \\
+drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.314         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.282)         &                     \\
 [1em]
 hiland      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
             &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
 [1em]
-drywint     &                     &                     &                     &                     &                     &                     &                     &       0.698         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.954)         &                     \\
+drywint     &                     &                     &                     &                     &                     &                     &                     &      0.0921         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.407)         &                     \\
 [1em]
-goldm       &                     &                     &                     &                     &                     &                     &                     &                     &     0.00911         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0175)         \\
+goldm       &                     &                     &                     &                     &                     &                     &                     &                     &    -0.00379         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &   (0.00535)         \\
 [1em]
-iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0482         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0780)         \\
+iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0520\sym{*}  \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0303)         \\
 [1em]
-silv        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0433         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0652)         \\
+silv        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0378         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0485)         \\
 [1em]
-zinc        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0562         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0958)         \\
+zinc        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0560         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0693)         \\
 [1em]
-oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000682\sym{***}\\
-            &                     &                     &                     &                     &                     &                     &                     &                     &(0.000000232)         \\
+oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000719\sym{***}\\
+            &                     &                     &                     &                     &                     &                     &                     &                     &  (8.91e-08)         \\
 [1em]
-\_cons      &       5.773\sym{***}&       4.912\sym{***}&       4.390\sym{***}&       4.926\sym{***}&       6.629\sym{***}&       4.953\sym{***}&       5.099\sym{***}&       4.853\sym{***}&       5.216\sym{***}\\
-            &     (0.139)         &     (0.466)         &     (0.772)         &     (0.490)         &     (0.650)         &     (0.431)         &     (0.525)         &     (1.740)         &     (0.495)         \\
+\_cons      &       5.773\sym{***}&       4.421\sym{***}&       6.528\sym{***}&       4.415\sym{***}&       5.872\sym{***}&       4.427\sym{***}&       5.414\sym{***}&       6.927\sym{***}&       5.805\sym{***}\\
+            &     (0.139)         &    (0.0586)         &     (0.243)         &     (0.108)         &     (0.497)         &    (0.0527)         &     (0.284)         &     (1.651)         &     (0.236)         \\
 \hline
-\(N\)       &         107         &         107         &          61         &          79         &          90         &         103         &          90         &          89         &          89         \\
-\(R^{2}\)   &       0.090         &       0.264         &       0.182         &       0.229         &       0.424         &       0.277         &       0.439         &       0.470         &       0.492         \\
+\(N\)       &         107         &         107         &          59         &          79         &         107         &         103         &          90         &          89         &          89         \\
+\(R^{2}\)   &       0.090         &       0.280         &       0.063         &       0.240         &       0.405         &       0.282         &       0.491         &       0.458         &       0.487         \\
 \hline\hline
 \multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
