--- a/Results/Table3.tex
+++ b/Results/Table3.tex
@@ -5,80 +5,77 @@
             &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
             &\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}\\
 \hline
-time\_total  &       0.353\sym{***}&       0.313\sym{**} &       0.448\sym{**} &      0.0733         &      0.0618         &       0.334\sym{**} &       0.195         &       0.293\sym{*}  &       0.373\sym{***}\\
-            &     (0.114)         &     (0.134)         &     (0.183)         &     (0.247)         &     (0.162)         &     (0.137)         &     (0.142)         &     (0.156)         &     (0.128)         \\
+centuries   &       0.353\sym{***}&       0.227\sym{*}  &       0.293\sym{*}  &      0.0537         &       0.110         &       0.241\sym{*}  &       0.152         &      0.0525         &       0.287\sym{**} \\
+            &     (0.114)         &     (0.117)         &     (0.143)         &     (0.186)         &     (0.135)         &     (0.122)         &     (0.119)         &     (0.145)         &     (0.117)         \\
 [1em]
-1.colonizer &                     &           0         &           0         &           0         &           0         &           0         &           0         &           0         &           0         \\
-            &                     &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
+1.colonizer &                     &           0         &                     &           0         &           0         &           0         &                     &                     &                     \\
+            &                     &         (.)         &                     &         (.)         &         (.)         &         (.)         &                     &                     &                     \\
 [1em]
-2.colonizer &                     &       1.267\sym{**} &       1.725\sym{*}  &       1.284\sym{**} &       0.824\sym{*}  &       1.252\sym{**} &       1.063\sym{*}  &      0.0493         &       1.076\sym{*}  \\
-            &                     &     (0.504)         &     (0.850)         &     (0.515)         &     (0.478)         &     (0.506)         &     (0.544)         &     (0.821)         &     (0.555)         \\
+2.colonizer &                     &       1.485\sym{*}  &           0         &       1.493\sym{*}  &       0.892         &       1.483\sym{*}  &           0         &           0         &           0         \\
+            &                     &     (0.842)         &         (.)         &     (0.850)         &     (0.715)         &     (0.849)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-3.colonizer &                     &       0.280         &       1.942\sym{*}  &       0.314         &     -0.0312         &       0.220         &     -0.0207         &      -1.614         &     -0.0855         \\
-            &                     &     (0.511)         &     (0.938)         &     (0.520)         &     (0.472)         &     (0.517)         &     (0.539)         &     (0.953)         &     (0.563)         \\
+3.colonizer &                     &       0.495         &       0.128         &       0.510         &       0.337         &       0.481         &      -1.046\sym{***}&      -1.470\sym{***}&      -1.116\sym{***}\\
+            &                     &     (0.843)         &     (0.547)         &     (0.850)         &     (0.704)         &     (0.851)         &     (0.253)         &     (0.367)         &     (0.277)         \\
 [1em]
-6.colonizer &                     &      0.0809         &     -0.0827         &      0.0331         &      -0.585         &     -0.0170         &     -0.0653         &      -1.688         &      -0.158         \\
-            &                     &     (0.823)         &     (1.094)         &     (1.159)         &     (0.707)         &     (0.834)         &     (0.759)         &     (1.155)         &     (0.809)         \\
+4.colonizer &                     &       0.615         &                     &       0.604         &       0.607         &       0.625         &      -0.677         &      -0.595         &      -0.771\sym{*}  \\
+            &                     &     (0.918)         &                     &     (0.926)         &     (0.765)         &     (0.926)         &     (0.418)         &     (0.487)         &     (0.427)         \\
 [1em]
-7.colonizer &                     &       0.681         &       1.543         &       1.271         &       0.709         &       0.579         &       0.911         &      -1.520         &       0.470         \\
-            &                     &     (0.817)         &     (1.185)         &     (0.973)         &     (0.745)         &     (0.828)         &     (0.776)         &     (1.325)         &     (0.807)         \\
+6.colonizer &                     &       0.473         &      -1.453\sym{**} &       0.244         &      -0.437         &       0.426         &      -1.033\sym{*}  &      -1.062         &      -1.063\sym{*}  \\
+            &                     &     (1.048)         &     (0.636)         &     (1.265)         &     (0.899)         &     (1.063)         &     (0.550)         &     (0.625)         &     (0.576)         \\
 [1em]
-8.colonizer &                     &       0.924         &       0.654         &       0.957         &       0.476         &       1.022         &       1.018         &      -1.129         &       0.732         \\
-            &                     &     (0.740)         &     (1.169)         &     (0.963)         &     (0.630)         &     (0.751)         &     (0.732)         &     (1.249)         &     (0.750)         \\
+america     &                     &                     &                     &                     &       0.252         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.816)         &                     &                     &                     &                     \\
 [1em]
-america     &                     &                     &                     &                     &       0.508         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.792)         &                     &                     &                     &                     \\
+africa      &                     &                     &                     &                     &      -1.097         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.712)         &                     &                     &                     &                     \\
 [1em]
-africa      &                     &                     &                     &                     &      -0.937         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.649)         &                     &                     &                     &                     \\
+asia        &                     &                     &                     &                     &     -0.0375         &                     &                     &                     &                     \\
+            &                     &                     &                     &                     &     (0.710)         &                     &                     &                     &                     \\
 [1em]
-asia        &                     &                     &                     &                     &      0.0852         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.678)         &                     &                     &                     &                     \\
+year\_independence&                     &                     &                     &                     &                     &    -0.00640         &                     &                     &                     \\
+            &                     &                     &                     &                     &                     &    (0.0149)         &                     &                     &                     \\
 [1em]
-year\_independence&                     &                     &                     &                     &                     &     -0.0134         &                     &                     &                     \\
-            &                     &                     &                     &                     &                     &    (0.0157)         &                     &                     &                     \\
+lat\_abst    &                     &                     &                     &                     &                     &                     &      -0.256         &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (1.171)         &                     &                     \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &      -0.794         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (1.184)         &                     &                     \\
-[1em]
-landlock    &                     &                     &                     &                     &                     &                     &   -0.000157         &                     &                     \\
+landlock    &                     &                     &                     &                     &                     &                     &      -0.137         &                     &                     \\
             &                     &                     &                     &                     &                     &                     &     (0.282)         &                     &                     \\
 [1em]
-island      &                     &                     &                     &                     &                     &                     &       0.768\sym{**} &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.310)         &                     &                     \\
+island      &                     &                     &                     &                     &                     &                     &       0.745\sym{**} &                     &                     \\
+            &                     &                     &                     &                     &                     &                     &     (0.290)         &                     &                     \\
 [1em]
-humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00456         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0223)         &                     \\
+humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00114         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0225)         &                     \\
 [1em]
-humid2      &                     &                     &                     &                     &                     &                     &                     &      0.0169         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0382)         &                     \\
+humid2      &                     &                     &                     &                     &                     &                     &                     &     0.00483         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0374)         &                     \\
 [1em]
-humid3      &                     &                     &                     &                     &                     &                     &                     &      0.0176         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0260)         &                     \\
+humid3      &                     &                     &                     &                     &                     &                     &                     &      0.0203         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0264)         &                     \\
 [1em]
-humid4      &                     &                     &                     &                     &                     &                     &                     &     -0.0241         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0318)         &                     \\
+humid4      &                     &                     &                     &                     &                     &                     &                     &     -0.0219         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0309)         &                     \\
 [1em]
-temp1       &                     &                     &                     &                     &                     &                     &                     &       0.200         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.163)         &                     \\
+temp1       &                     &                     &                     &                     &                     &                     &                     &       0.145         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.168)         &                     \\
 [1em]
-temp2       &                     &                     &                     &                     &                     &                     &                     &      0.0586         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0634)         &                     \\
+temp2       &                     &                     &                     &                     &                     &                     &                     &      0.0297         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0612)         &                     \\
 [1em]
-temp3       &                     &                     &                     &                     &                     &                     &                     &     -0.0120         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0755)         &                     \\
+temp3       &                     &                     &                     &                     &                     &                     &                     &    -0.00247         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0770)         &                     \\
 [1em]
-temp4       &                     &                     &                     &                     &                     &                     &                     &     -0.0635         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0649)         &                     \\
+temp4       &                     &                     &                     &                     &                     &                     &                     &     -0.0573         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0651)         &                     \\
 [1em]
-temp5       &                     &                     &                     &                     &                     &                     &                     &    -0.00686         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0549)         &                     \\
+temp5       &                     &                     &                     &                     &                     &                     &                     &      0.0227         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &    (0.0547)         &                     \\
 [1em]
-steplow     &                     &                     &                     &                     &                     &                     &                     &       0.310         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.315)         &                     \\
+steplow     &                     &                     &                     &                     &                     &                     &                     &      0.0148         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.313)         &                     \\
 [1em]
-deslow      &                     &                     &                     &                     &                     &                     &                     &       0.114         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.438)         &                     \\
+deslow      &                     &                     &                     &                     &                     &                     &                     &     -0.0167         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.446)         &                     \\
 [1em]
 stepmid     &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
             &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
@@ -86,8 +83,8 @@ stepmid     &                     &                     &                     & 
 desmid      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
             &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
 [1em]
-drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.721\sym{*}  &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.404)         &                     \\
+drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.550         &                     \\
+            &                     &                     &                     &                     &                     &                     &                     &     (0.399)         &                     \\
 [1em]
 hiland      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
             &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
@@ -98,8 +95,8 @@ drywint     &                     &                     &                     & 
 goldm       &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
             &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
 [1em]
-iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0651         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &     (0.151)         \\
+iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0674         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &     (0.153)         \\
 [1em]
 silv        &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
             &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
@@ -107,14 +104,14 @@ silv        &                     &                     &                     & 
 zinc        &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
             &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
 [1em]
-oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000257         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &(0.000000925)         \\
+oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000546         \\
+            &                     &                     &                     &                     &                     &                     &                     &                     &(0.000000903)         \\
 [1em]
-\_cons      &       4.710\sym{***}&       3.980\sym{***}&       3.705\sym{***}&       4.146\sym{***}&       5.171\sym{***}&       30.22         &       4.169\sym{***}&      -1.117         &       4.029\sym{***}\\
-            &     (0.197)         &     (0.481)         &     (0.822)         &     (0.510)         &     (0.792)         &     (30.81)         &     (0.521)         &     (2.954)         &     (0.528)         \\
+\_cons      &       4.710\sym{***}&       3.871\sym{***}&       5.581\sym{***}&       4.000\sym{***}&       5.056\sym{***}&       16.40         &       5.260\sym{***}&       1.529         &       5.219\sym{***}\\
+            &     (0.197)         &     (0.826)         &     (0.330)         &     (0.840)         &     (0.988)         &     (29.16)         &     (0.323)         &     (2.621)         &     (0.268)         \\
 \hline
-\(N\)       &          54         &          54         &          23         &          48         &          45         &          54         &          45         &          45         &          45         \\
-\(R^{2}\)   &       0.155         &       0.408         &       0.479         &       0.315         &       0.694         &       0.417         &       0.629         &       0.704         &       0.562         \\
+\(N\)       &          54         &          54         &          22         &          48         &          54         &          54         &          45         &          45         &          45         \\
+\(R^{2}\)   &       0.155         &       0.391         &       0.289         &       0.306         &       0.603         &       0.393         &       0.599         &       0.658         &       0.528         \\
 \hline\hline
 \multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
